# cooklint

./: Cargo.toml  flake.nix  justfile
.github/: main.yml
.github/workflows/: main.yml
src/: cli.rs  lint.rs  main.rs
